# ingsock

./: .bazelrc  .clang-format  .gitignore  CMakeLists.txt  MODULE.bazel
.github/workflows/: ci.yaml
example/: CMakeLists.txt  client.cpp  resolve.cpp
example/src/: client.cpp  resolve.cpp  server.cpp
include/: ingsock.h
ing/: BUILD.bazel  ingsock.cpp  ip_addr_v4_test.cpp  ip_addr_v6_test.cpp  socket.h
ingsock/: CMakeLists.txt
ingsock/example/: CMakeLists.txt
ingsock/example/src/: client.cpp  resolve.cpp  server.cpp
ingsock/include/: ingsock.h
ingsock/include/ing/: socket.h
ingsock/include/ingsock/: ip_addr.h  last_error.h  resolve.h  socket.h  socket_addr.h
ingsock/src/: ingsock.cpp
ingsock/test/: CMakeLists.txt
ingsock/test/src/: test_ip_addr_v4.cpp  test_ip_addr_v6.cpp  test_socket.cpp
src/: ingsock.cpp
warning/: CMakeLists.txt
